# rusty-cnc-firmware

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: ci.yaml
.github/workflows/: build_and_deploy.yaml
src/: allocator.rs  heartbeat.rs  init.rs  main.rs  message_parser.rs  stepper.rs  stepper_control.rs  usb.rs
