[package]
edition = "2021"
name = "rusty-cnc-firmware"
version = "0.1.0"
license = "MIT"

[dependencies]
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }

embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-stm32 = { version = "0.1.0",git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt", "stm32f767zi", "unstable-pac", "time-driver-any", "exti"]  }
embassy-net = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
embedded-io = { version = "0.4.0", features = ["async"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

anyhow = { version = "1.0.45", default-features = false }
bytes = { version = "1.0", default-features = false }
prost = { version = "0.11.9", default-features = false, features = ["prost-derive"] }
cfg-if = "1"

# Only necessary if using Protobuf well-known types:
prost-types = { version = "0.11.9", default-features = false }

defmt = "0.3.4"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
rand_core = "0.6.3"
critical-section = "1.1"
embedded-storage = "0.3.0"
static_cell = "1.0"
embedded-alloc = "0.5.0"

[dependencies.stm32f7xx-hal]
version = "0.7.0"
features = ["stm32f767", "rt"]


[build-dependencies]
prost-build = "0.11.9"
